Fix z-index on flash messages

--- a/app/assets/stylesheets/flash.sass
+++ b/app/assets/stylesheets/flash.sass
@@ -3,7 +3,7 @@ $flash_width: 550px
 .flash
   position: fixed
   width: $flash_width
-  z-index: 10
+  z-index: 11
   top: 40px
   left: 50%
   margin-left: -($flash_width/2)
